# maiq-bot

./: .gitignore  Cargo.toml  readme.md
src/: api.rs  background_poller.rs  db.rs  env.rs  error.rs  main.rs  models.rs  poller.rs  utils.rs
src/bot/: commands.rs  context.rs  format.rs  formatter.rs  handler.rs  handler_context.rs  mod.rs  notifier.rs  replies.rs  snapshot_utils.rs  state.rs  timetable.rs
src/bot/callback/: handler.rs  mod.rs
src/bot/callbacks/: handler.rs  mod.rs
src/bot/commands/: dev.rs  handler.rs  mod.rs  user.rs
src/bot/dialogues/: mod.rs  setup_settings.rs
src/db/: mod.rs  models.rs
